@@ -10,6 +10,7 @@
 - fixed loading FlowStreams without identifiers
 - fixed serializing TMS sources in the Flow module
 - fixed `String.args()` for evaluting keys with `$` character
+- fixed `ul` parsing in the Markdown parser
 
 ========================
 0.0.94
